--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ actix-session = {version = "0.6", features = ["redis-actor-session"]}
 actix-identity = "0.4"
 argon2 = {version = "0.3", features = ["std"] }
 rand_core = { version = "0.6", features = ["std"] }
+comrak = "0.12"
