--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 
-diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
+diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
