--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
 chrono = { version = "0.4.19", features = ["serde"] }
-actix-redis = "0.10"
 actix-session = {version = "0.6", features = ["redis-actor-session"]}
 actix-identity = "0.4"
 argon2 = {version = "0.3", features = ["std"] }
@@ -23,4 +22,6 @@ comrak = "0.12"
 milli = { git = "https://github.com/meilisearch/milli", rev = "6ee67df128b63f40eedfe1cb2edfa1a59492e310"} # https://github.com/meilisearch/milli/releases/tag/v0.26.4
 tempfile = "3.3"
 scraper = "0.13"
-rust-embed = "6.4"
+rust-embed = {version = "6.4", features = ["actix", "interpolate-folder-path"]}
+mime_guess = "2.0"
+markdown_to_text = '1.0'
