--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,21 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@bytemd/plugin-gfm": "^1.14.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@tailwindcss/typography": "^0.5.2",
     "@tsconfig/svelte": "^2.0.1",
+    "autoprefixer": "^10.4.4",
+    "bytemd": "^1.14.0",
+    "postcss": "^8.4.12",
+    "postcss-load-config": "^3.1.4",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.10.5",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
-    "postcss": "^8.4.12",
-    "postcss-load-config": "^3.1.4",
-    "autoprefixer": "^10.4.4",
-    "tailwindcss": "^3.0.23"
+    "yup": "^0.32.11"
   }
 }
