--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DATABASE_URL: postgresql://postgres:password@db:5432/pbe
+      DATABASE_URL: postgresql://postgres:password@database:5432/pbe
     restart: always
+    depends_on:
+      - database
 volumes:
   postgres-data:
