--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ rust-embed = {version = "6.4", features = ["actix", "interpolate-folder-path"]}
 mime_guess = "2.0"
 markdown_to_text = '1.0'
 diesel_migrations = "1.4"
+actix-cors = "0.6"
