--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 
-diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
+diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
 dotenv = "0.15.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -24,3 +24,7 @@ mime_guess = "2.0"
 markdown_to_text = '1.0'
 diesel_migrations = "1.4"
 actix-cors = "0.6"
+uuid = { version = "0.8", features = ["v4", "serde"] }
+blake3 = "1.3.1"
+regex = "1"
+lazy_static = "1.4.0"
