--- a/client_library/package.json
+++ b/client_library/package.json
@@ -10,7 +10,8 @@
     "test": "jest --coverage",
     "dev": "parcel watch",
     "build": "parcel build",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "docs": "typedoc --out docs ./src"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "parcel": "^2.6.0",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.4",
+    "typedoc": "^0.22.17",
     "typescript": "^4.7.3"
   },
   "dependencies": {
