refactor: improve error handling
This improves the error handling of methods that previously returned
a generic `DbError`.
It now returns a concrete `AppError` enum, whose variants wrap a
concrete third party error (e.g. by diesel, argon2 etc.).

This makes it much easier to decide, which concrete actix_web error
needs to be returned.

Note that there is still room for improvement, though:
for a lot of errors that can happen in diesel or elsewhere, we currently
return a rather generic `ErrorInternalServerError` error.

new deps: thiserror => enables much better error handling
removed deps: lazy_static, regex => not needed anymore

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-
 diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
 dotenv = "0.15.0"
 serde = { version = "1", features = ["derive"] }
@@ -26,5 +25,4 @@ diesel_migrations = "1.4"
 actix-cors = "0.6"
 uuid = { version = "0.8", features = ["v4", "serde"] }
 blake3 = "1.3.1"
-regex = "1"
-lazy_static = "1.4.0"
+thiserror = "1.0.31"
