--- a/client_library/package.json
+++ b/client_library/package.json
@@ -11,7 +11,8 @@
     "dev": "parcel watch",
     "build": "parcel build",
     "lint": "eslint .",
-    "docs": "typedoc --out docs ./src"
+    "docs": "typedoc --out docs ./src",
+    "prepare": "cd .. && husky install client_library/.husky"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "parcel": "^2.6.0",
     "prettier": "^2.6.2",
