--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src "
   },
   "devDependencies": {
     "@bytemd/plugin-gfm": "^1.14.0",
@@ -18,6 +19,8 @@
     "bytemd": "^1.14.0",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.4",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.10.5",
@@ -26,5 +29,9 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "yup": "^0.32.11"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "useTabs": false
   }
 }
