--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ actix-cors = "0.6"
 uuid = { version = "0.8", features = ["v4", "serde"] }
 blake3 = "1.3.1"
 thiserror = "1.0.31"
+actix-form-data = "0.6.2"
+actix-multipart = "0.4.0"
+base64 = "0.20.0"
+actix-web-lab = "0.18.8"
