--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "@bytemd/plugin-gfm": "^1.14.0",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tailwindcss/typography": "^0.5.2",
-    "@tsconfig/svelte": "^2.0.1",
+    "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.4",
     "bytemd": "^1.14.0",
     "postcss": "^8.4.12",
@@ -22,12 +22,12 @@
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.10.5",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "vite": "^2.9.9",
+    "vite": "^4.0.3",
     "yup": "^0.32.11"
   },
   "prettier": {
