--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,26 +7,27 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
-dotenv = "0.15.0"
+diesel = { version = "2.1.0", features = ["postgres", "r2d2", "postgres_backend", "uuid", "chrono"] }
+actix-session = { version ="0.8.0", features = ["cookie-session"] }
+dotenvy = "0.15.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0.4.19", features = ["serde"] }
-actix-identity = "0.4"
-argon2 = {version = "0.3", features = ["std"] }
+actix-identity = "0.6.0"
+argon2 = {version = "0.5.2", features = ["std"] }
 rand_core = { version = "0.6", features = ["std"] }
-comrak = "0.12"
-tantivy = "0.18.0"
+comrak = "0.19.0"
+tantivy = "0.21.1"
 tempfile = "3.3"
-rust-embed = {version = "6.4", features = ["actix", "interpolate-folder-path"]}
+rust-embed = {version = "8.0.0", features = ["actix", "interpolate-folder-path"]}
 mime_guess = "2.0"
 markdown_to_text = '1.0'
-diesel_migrations = "1.4"
+diesel_migrations = "2.1.0"
 actix-cors = "0.6"
-uuid = { version = "0.8", features = ["v4", "serde"] }
+uuid = { version = "1.5.0", features = ["v4", "serde"] }
 blake3 = "1.3.1"
 thiserror = "1.0.31"
 actix-form-data = "0.6.2"
-actix-multipart = "0.4.0"
-base64 = "0.20.0"
-actix-web-lab = "0.18.8"
+actix-multipart = "0.6.1"
+base64 = "0.21.5"
+actix-web-lab = "0.20.0"
