--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - "8080:8080"
     environment:
       DATABASE_URL: postgresql://postgres:password@database:5432/pbe
+      SECRET_KEY: # openssl rand -hex 32
     restart: always
     depends_on:
       - database
